--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <body>
 
-  <div id="preloader" class="preloader image">
-  </div>
+  <div id="preloader"></div>
 
   <div id="circle-container"></div>
+ 
 
   <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
@@ -88,11 +88,6 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong>Paathalam,Kerala</li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Maveli@KingofOnam.com</span></li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-suit-heart-fill"></i> <strong> Favourite Food:</strong> <span>Onam Sadhya</span></li>
                   </ul>
                 </div>
               </div>
