--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>King Mahabali (Maveli)</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>I'm not really the texting or calling type, you see</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Maveli</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Role:</strong> <span>Full-Time Ruler of Paathaalam</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
@@ -90,37 +90,54 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Maveli@KingofOnam.com</span></li>
                   </ul>
                 </div>
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-heart"></i> <strong> Favourite Feast:</strong>Onam Sadhya</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul>
+                    <li>
+                      <i class="bi bi-music-note-beamed"></i>
+                      <strong>Favourite Song:</strong>
+                      <a href="https://youtu.be/VrrnflVEiMg?si=AW4W8KMF_GucHzVq" target="_blank" class="favorite-song-link">Thiruvavaniravu.mp3</a>
+                    </li>
+                    
+                  </ul>
+                </div>
               </div>
               <div class="row mt-n4">
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
+
+                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <i class="bi bi-flower1" style="color: #ffb459;"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="2521" data-purecounter-duration="1" class="purecounter"></span>
+                    <p><strong>Pookalams</strong> Visited this year and Counting..!</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                    <i class="bi bi-globe-central-south-asia" style="color: #20b38e;"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
+                    <p><strong>Travels</strong> Through all 14 states of Kerala Once an Year</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-clock" style="color: #2cbdee;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                      <i class="bi bi-clock" style="color: #2cbdee;"></i>
+                      <span data-purecounter-start="0" data-purecounter-end="576" data-purecounter-duration="1" class="purecounter"></span>
+                      <p><strong>Annual Visits to Kerala</strong> Blessing the land of Kerala with my presence once a year during the grand festival of Onam.</p>
                   </div>
-                </div>
+              </div>
+              
 
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-award" style="color: #ffb459;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <i class="bi bi-award" style="color: #8a1ac2;"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1" class="purecounter"></span>
+                    <p><strong>Awards:</strong> Bestowed by the people of Kerala and even the divine Lords themselves, in recognition of my boundless generosity.</p>
                   </div>
                 </div>
               </div>
@@ -128,21 +145,21 @@
 
             <div class="skills-content ps-lg-4">
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill">Generous <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">Kingdom Management <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
+                <span class="skill">Leadership <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -294,7 +311,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
