Updated footer img and Resume

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <div class="count-box">
                     <i class="bi bi-globe-central-south-asia" style="color: #20b38e;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Travels</strong> Through all 14 states of Kerala Once an Year</p>
+                    <p><strong>Travels</strong> Through all 14 districts of Kerala Once an Year</p>
                   </div>
                 </div>
 
@@ -184,10 +184,10 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">History</h3>
             <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Maveli</h4>
+              <p><em> I am Maveli, a legendary king from the folklore of Kerala. Known for my benevolence, I ruled the kingdom of Kerala with a sense of equality and justice. Despite facing the mighty gods, I stood by my principles and eventually descended into the netherworld, becoming a symbol of Kerala's rich cultural heritage and the Onam festival's spirit of unity and harmony.</em></p>
               <p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
@@ -214,18 +214,19 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>King of Paathalam</h4>
+              <h5>Timeless</h5>
+              <p><em>Kingdom of Paathalam, Kerala</em></p>
               <p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+                  <ul>
+                      <li>Master of ceremonies at heavenly feasts, making sure nobody leaves hungry, not even the ghosts!</li>
+                      <li>Delegate responsibilities to my loyal advisors, who are as efficient as the legendary Pushpak Vimana.</li>
+                      <li>Supervise the assessment of the kingdom's happiness, ensuring smiles are as common as coconuts in Kerala.</li>
+                      <li>Oversee the efficient use of resources, turning water into gold and blessing the land with prosperity.</li>
+                  </ul>
               </p>
-            </div>
+          </div>
+          
             <div class="resume-item">
               <h4>Graphic design specialist</h4>
               <h5>2017 - 2018</h5>
@@ -454,7 +455,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Mahabeli</h3>
+      <img src="assets/img/pre.png">
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
