Fixed gradient issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
 
@@ -240,9 +239,8 @@
                                 </p>
                                 <p>
                                     <ul>
-                                        <li>Portland par 127,Orlando, FL</li>
-                                        <li>(123) 456-7891</li>
-                                        <li>alice.barkley@example.com</li>
+                                        <li>Kerala,India</li>
+                                        <li>Maveli@KingofOnam.com</li>
                                     </ul>
                                 </p>
                             </div>
