Fixed Preloader and improved cursor animation

--- a/index.html
+++ b/index.html
@@ -252,7 +252,12 @@
                                 <p>
                                     <em>Mavelikara LP School</em>
                                 </p>
-                                <p>Had a wondefull lkg ukg fom Mavelikara</p>
+                                <p>Embarked on a journey of laughter and learning at the Mavelikara LP School. Those early years were a delightful dance in the rain, quite literally! Here are some fond memories:</p>
+                                <ul>
+                                    <li>Building an impressive collection of umbrellas, even back then!</li>
+                                    <li>Reliving the good old days with a smile on my face.</li>
+
+                                </ul>
                             </div>
                             <div class="resume-item">
                                 <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
@@ -317,10 +322,8 @@
 
                         <div class="py-5">
                             <div class="row">
-                                <div
-                                    class="col-lg-8 mx-auto">
+                                <div class="col-lg-8 mx-auto">
 
-                                    <!-- Countdown 4-->
                                     <div class="rounded bg-gradient-4 text-white shadow p-5 text-center mb-5">
                                         <p class="mb-0 font-weight-bold text-uppercase">Grand CountDown for Next Onam</p>
                                         <div id="countdown" class="countdown py-4">
@@ -344,10 +347,8 @@
 
                 </div>
             </section>
-            <!-- End My Services Section -->
 
 
-            <!-- ======= Contact Me Section ======= -->
             <section id="contact" class="contact">
                 <div class="container">
 
@@ -433,12 +434,10 @@
 
                 </div>
             </section>
-            <!-- End Contact Me Section -->
+
 
         </main>
-        <!-- End #main -->
 
-        <!-- ======= Footer ======= -->
         <footer id="footer">
             <div class="container">
                 <img src="assets/img/pre.png">
@@ -468,13 +467,13 @@
                 </div>
             </div>
         </footer>
-        <!-- End Footer -->
+
 
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
             <i class="bi bi-arrow-up-short"></i>
         </a>
 
-        <!-- Vendor JS Files -->
+
         <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
         <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -485,7 +484,6 @@
         <script src="https://cdn.jsdelivr.net/npm/countdown@2.6.0/dist/countdown.min.js"></script>
 
 
-        <!-- Template Main JS File -->
         <script src="assets/js/main.js"></script>
 
     </body>
