Countdown adn prelaoder text added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
     <body>
 
-        <div id="preloader"></div>
+        <div id="preloader">
+            <p>Hold On,Maveli is getting ready..</p>
+        </div>
+
 
         <div id="circle-container"></div>
 
@@ -314,7 +317,7 @@
                     <div class="section-title">
                         <span>CountDown !</span>
                         <h2>CountDown !</h2>
-                        <p>Are you Excited for my Next Grand Arrival ? Keep up with the Countdown</p>
+                        <p>"Counting Down to Onam 2024: Embracing the Colors, Culture, and Joy of Kerala's Biggest Celebration!"</p>
                     </div>
 
 
@@ -325,7 +328,7 @@
                                 <div class="col-lg-8 mx-auto">
 
                                     <div class="rounded bg-gradient-4 text-white shadow p-5 text-center mb-5">
-                                        <p class="mb-0 font-weight-bold text-uppercase">Grand CountDown for Next Onam</p>
+                                        <p class="mb-0 font-weight-bold text-uppercase">"Get Ready for Onam 2024!"</p>
                                         <div id="countdown" class="countdown py-4">
                                             <span class="h1 font-weight-bold">0</span>
                                             Days
