--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                 <div class="container">
 
                     <div class="section-title">
-                        <span>My Resume</span>
-                        <h2>My Resume</h2>
-                        <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+                        <span>Maveli's Journery</span>
+                        <h2>Maveli's Journery</h2>
+                        <p>Step into the colorful world of Onam and Kerala, where Maveli's journey unfolds amidst festive hues and cultural riches in 'God's Own Country'"</p>
                     </div>
 
                     <div class="row">
@@ -263,46 +263,49 @@
                                 </ul>
                             </div>
                             <div class="resume-item">
-                                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                                <h5>2010 - 2014</h5>
+                                <h4>Bachelor of Onamology</h4>
+
                                 <p>
-                                    <em>Rochester Institute of Technology, Rochester, NY</em>
+                                    <em>Kerala School of Harvest Festivities, Thrikkakara, Kerala</em>
                                 </p>
-                                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                                <p>Studied the art of spreading joy, happiness, and harvest abundance during the grand celebration of Onam. Specialized in making people smile and bringing prosperity to Kerala.</p>
+
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <h3 class="resume-title">Professional Experience</h3>
                             <div class="resume-item">
-                                <h4>King of Paathalam</h4>
-                                <h5>Timeless</h5>
+                                <h4>Onam's Grand Ambassador</h4>
+
                                 <p>
-                                    <em>Kingdom of Paathalam, Kerala</em>
+                                    <em>Kingdom of Kerala, During Onam</em>
                                 </p>
                                 <p>
                                     <ul>
-                                        <li>Master of ceremonies at heavenly feasts, making sure nobody leaves hungry, not even the ghosts!</li>
-                                        <li>Delegate responsibilities to my loyal advisors, who are as efficient as the legendary Pushpak Vimana.</li>
-                                        <li>Supervise the assessment of the kingdom's happiness, ensuring smiles are as common as coconuts in Kerala.</li>
-                                        <li>Oversee the efficient use of resources, turning water into gold and blessing the land with prosperity.</li>
+                                        <li>Commander of the Grand Sadya, where flavors dance like Kathakali performers, leaving taste buds delighted!</li>
+                                        <li>Leading the lively Pulikali dance, where folks turn into playful tigers, adding a splash of fun to the festivities.</li>
+                                        <li>Keeper of the Pookalam Tradition, ensuring the floral carpets bloom with colors as vibrant as the festivities.</li>
+                                        <li>Champion of the Vadamvali Challenge, pulling the rope of unity and fun during the exhilarating tug of war battles!</li>
+
                                     </ul>
                                 </p>
                             </div>
 
                             <div class="resume-item">
-                                <h4>Chief Happiness Officer</h4>
-                                <h5>2017 - 2018</h5>
+                                <h4>About Onam</h4>
                                 <p>
-                                    <em>The Land of Joy, Kerala</em>
+                                    <em>Celebrated in Kerala</em>
                                 </p>
                                 <p>
                                     <ul>
-                                        <li>Spread happiness like confetti through innovative marketing programs – from creating joyous logos, brochures, infographics, to orchestrating presentations that put smiles on faces.</li>
-                                        <li>Juggled more tasks than a clown at a circus, keeping the fun alive even under the big top's pressure.</li>
-                                        <li>Offered laughter-infused design advice that tickled everyone's funny bone, ensuring our designs resonated with Kerala's joyful spirit.</li>
-                                        <li>Produced over 4 sidesplitting design showcases monthly, leaving clients and account managers in fits of laughter with our graphic wizardry.</li>
+                                        <li>Onam, the vibrant festival of Kerala, bathes the land in a riot of colors and festivities.</li>
+                                        <li>It's a time of joy, with lively decorations, delicious feasts, and the iconic Pookalam flower arrangements.</li>
+                                        <li>The grand Snake Boat Race adds excitement to the celebrations, attracting crowds from far and wide.</li>
+                                        <li>Onam is a cultural extravaganza, where traditions come alive, and happiness knows no bounds.</li>
+                                        <li>People also commemorate the legendary King Mahabali's return, symbolizing love, benevolence, and equality.</li>
                                     </ul>
                                 </p>
+
 
                             </div>
                         </div>
