--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link scrollto" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="nav-link scrollto" href="#resume">Resume</a>
+                        <a class="nav-link scrollto" href="#resume">Maveli's Journery</a>
                     </li>
                     <li>
                         <a class="nav-link scrollto" href="#services">Count Down</a>
@@ -447,7 +447,7 @@
         <footer id="footer">
             <div class="container">
                 <img src="assets/img/pre.png">
-                <p>Blessing to all my Folks!</p>
+                <p>Blessings to all my Folks!</p>
                 <div class="social-links">
                     <a href="#" class="twitter">
                         <i class="bx bxl-twitter"></i>
