Typos corrected final commit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link scrollto" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="nav-link scrollto" href="#resume">Maveli's Journery</a>
+                        <a class="nav-link scrollto" href="#resume">Maveli's Journey</a>
                     </li>
                     <li>
                         <a class="nav-link scrollto" href="#services">Count Down</a>
@@ -226,8 +226,8 @@
                 <div class="container">
 
                     <div class="section-title">
-                        <span>Maveli's Journery</span>
-                        <h2>Maveli's Journery</h2>
+                        <span>Maveli's Journey</span>
+                        <h2>Maveli's Journey</h2>
                         <p>Step into the colorful world of Onam and Kerala, where Maveli's journey unfolds amidst festive hues and cultural riches in 'God's Own Country'"</p>
                     </div>
 
